--- a/_posts/2024-04-22-hp-gbif-be.md
+++ b/_posts/2024-04-22-hp-gbif-be.md
@@ -2,8 +2,8 @@
 title: "GBIF.be launched!"
 date: 2024-04-21 14:37:00 +0100
 categories: ["Hosted Portal", "GBIF"]
-lang-ref: for authors
-background: https://via.placeholder.com/600x300
+lang-ref: hp.gbif.be
+background: /assets/images/logos/node-green.png
 ---
 
-We are delighted to announce the lauch of our GBIF.be Hosted portal.
+We are delighted to announce the lauching of our **GBIF.be Hosted portal**.
