early translations into french

--- a/_posts/2024-05-01-hp-gbif-be.md
+++ b/_posts/2024-05-01-hp-gbif-be.md
@@ -3,7 +3,10 @@ title: "GBIF.be launched!"
 date: 2024-04-21 14:37:00 +0100
 categories: ["Hosted Portal", "GBIF"]
 lang-ref: hp.gbif.be
-background: /assets/images/logos/node-green.png
+background: "{{ site.data.images.Lycaena_tityrus.src }}"
+imageLicense: "{{ site.data.images.Lycaena_tityrus.caption }}"
 ---
 
 We are delighted to announce the lauching of our **GBIF.be Hosted portal**.
+
+Blablabla
