--- a/_posts/2024-05-01-hp-gbif-be.md
+++ b/_posts/2024-05-01-hp-gbif-be.md
@@ -3,10 +3,12 @@ title: "GBIF.be launched!"
 date: 2024-04-21 14:37:00 +0100
 categories: ["Hosted Portal", "GBIF"]
 lang-ref: hp.gbif.be
-background: "{{ site.data.images.Lycaena_tityrus.src }}"
-imageLicense: "{{ site.data.images.Lycaena_tityrus.caption }}"
+background: "{{ site.data.images.RR04.src }}"
+imageLicense: "{{ site.data.images.RR04.caption }}"
 ---
 
-We are delighted to announce the lauching of our **GBIF.be Hosted portal**.
+We are delighted to announce the launching of our **GBIF.be** Hosted portal.
 
-Blablabla
+Based on a simple website hosted and maintained on the GBIF infrastructure, we customize it to shwocase **biodiversity in Belgium** and the Belgian contribution to GBIF global initiative. **GBIF.be** website is available in four languages : english, dutch, french and german.
+
+We welcome your remarks and comments to make more attractive en enjoyable.
