adding preTitle to posts

--- a/_posts/2024-05-01-hp-gbif-be.md
+++ b/_posts/2024-05-01-hp-gbif-be.md
@@ -1,5 +1,6 @@
 ---
 title: "GBIF.be launched!"
+preTitle: April 21, 2024
 date: 2024-04-21 14:30:00
 author: Andre Heughebaert
 categories: ["Hosted Portal", "GBIF"]
