--- a/_posts/2024-05-24-BCCM-IHEM.md
+++ b/_posts/2024-05-24-BCCM-IHEM.md
@@ -1,5 +1,6 @@
 ---
 title: "Fungal genomics as a new service at BCCM/IHEM"
+preTitle: May 24, 2024
 date: 2024-05-24 14:37:00 +0100
 lang-ref: bccm.ihem
 categories: ["BCCM", "GBIF"]
