--- a/_posts/fr/2024-05-01-hp-gbif-be.md
+++ b/_posts/fr/2024-05-01-hp-gbif-be.md
@@ -1,5 +1,6 @@
 ---
 title: "GBIF.be est lancé"
+preTitle: April 21, 2024
 date: 2024-04-21 14:37:00 +0100
 categories: ["Hosted Portal", "GBIF"]
 lang-ref: hp.gbif.be
