translated local news

--- a/_posts/2024-05-01-hp-gbif-be.md
+++ b/_posts/2024-05-01-hp-gbif-be.md
@@ -9,8 +9,11 @@ background: "{{ site.data.images.RR04.src }}"
 imageLicense: "{{ site.data.images.RR04.caption }}"
 ---
 
+
 We are delighted to announce the launching of **GBIF.be**, our Hosted Portal.
 
-Based on a simple website hosted and maintained on the GBIF infrastructure, we customized it to shwocase **biodiversity in Belgium** and the Belgian contribution to GBIF global initiative. Our website is available in three languages : dutch, english and french.
+![GBIF.be](/assets/images/logos/gbif-be-logo.png)
 
-We hope you enjoy it and welcome your comments to make it even more attractive.
+Based on [Hosted portals technology](https://www.gbif.org/hosted-portals) and maintained on the GBIF infrastructure, this website was crafted by the IT team to showcase **biodiversity in Belgium** as our contribution to GBIF global initiative. GBIF.be Hosted portal offers a better visibility for Belgian biodiversity actors and local news. It is available in three languages : dutch, english and french.
+
+We hope you enjoy it and welcome your suggestions for improvements via [GitHub](https://github.com/gbif/hp-gbif-be).
