--- a/_posts/fr/2024-05-01-hp-gbif-be.md
+++ b/_posts/fr/2024-05-01-hp-gbif-be.md
@@ -9,9 +9,10 @@ background: "{{ site.data.images.RR04.src }}"
 imageLicense: "{{ site.data.images.RR04.caption }}"
 ---
 
-Nous sommes très heureux de vous announcer le lancement de notre portail hébergé **GBIF.be**.
+Nous sommes ravis d'announcer le lancement de notre portail hébergé **GBIF.be**.
 
-Basé sur un simple site hébergé et maintenu sur l'infrastructure du GBIF,
-nous l'avons adapté afin de montrer la **biodiversité en Belgique** ainsi que la contribution belge à cette initiative globale. Le site **GBIF.be** est disponible dans quatre langues : l'anglais, le néérlandlais, le français et l'allemand.
+![GBIF.be](/assets/images/logos/gbif-be-logo.png)
 
-Toutes vos remarques et commentaires pour rendre celui-çi plus attractive et agréable sont les bienvenues.
+Basé sur la [technologie des portails hébergés](https://www.gbif.org/hosted-portals) et maintenu sur l'infrastructure du GBIF, ce site Web a été conçu par l'équipe informatique pour présenter la **biodiversité en Belgique** comme notre contribution à Initiative mondiale GBIF. Le portail hébergé GBIF.be offre une meilleure visibilité aux acteurs belges de la biodiversité et à l'actualité locale. Il est disponible en trois langues : néerlandais, anglais et français.
+
+Nous espérons que vous l'apprécierez et apprécions vos suggestions d'amélioration via [GitHub](https://github.com/gbif/hp-gbif-be).
