--- a/_posts/nl/2024-05-01-hp-gbif-be.md
+++ b/_posts/nl/2024-05-01-hp-gbif-be.md
@@ -8,8 +8,10 @@ background: "{{ site.data.images.RR04.src }}"
 imageLicense: "{{ site.data.images.RR04.caption }}"
 ---
 
-We are delighted to announce the launching of our **GBIF.be** Hosted portal.
+Met veel genoegen kondigen wij de lancering aan van **GBIF.be**, onze Hosted Portal.
 
-Based on a simple website hosted and maintained on the GBIF infrastructure, we customize it to shwocase **biodiversity in Belgium** and the Belgian contribution to GBIF global initiative. **GBIF.be** website is available in four languages : english, dutch, french and german.
+![GBIF.be](/assets/images/logos/gbif-be-logo.png)
 
-We welcome your remarks and comments to make more attractive en enjoyable.
+Gebaseerd op [Hosted Portals-technologie](https://www.gbif.org/hosted-portals) en onderhouden op de GBIF-infrastructuur, werd deze website gemaakt door het IT-team om **biodiversiteit in België** onder de aandacht te brengen als onze bijdrage aan GBIF mondiaal initiatief. GBIF.be Hosted portal biedt een betere zichtbaarheid voor Belgische biodiversiteitsactoren en lokaal nieuws. Het is beschikbaar in drie talen: Nederlands, Engels en Frans.
+
+We hopen dat u ervan geniet en verwelkomen uw suggesties voor verbeteringen via [GitHub](https://github.com/gbif/hp-gbif-be).
