Update title for GBIF Graduate Researchers Award post

--- a/_posts/fr/2026-01-20-GRA.md
+++ b/_posts/fr/2026-01-20-GRA.md
@@ -1,6 +1,5 @@
 ---
-title: "Belgian Call for Applications – GBIF Graduate Researchers Award 2026
-"
+title: "Appel belge – Prix GBIF pour jeunes chercheurs 2026 (Graduate Researchers Award)"
 preTitle: Jan 20, 2026
 categories: ["Award", "GBIF","Nominations"]
 lang-ref: GRA
